# discount_screener

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  launch-ui.ps1
_bmad-output/: README.md  project-context.md
_bmad/bmm/: config.yaml
apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows/src-tauri/capabilities/: default.json
apps/windows/src-tauri/icons/: icon.icns
apps/windows/src-tauri/src/: chart_patterns.rs  commands.rs  congress.rs  congress_scoring.rs  crypto_cycle.rs  crypto_md.rs  db.rs  dcf_model.rs  edgar.rs  email.rs  engine.rs  feed_log.rs  fetcher.rs  fibonacci.rs  index_estimates.rs  lib.rs  main.rs  news.rs  opportunity_v3.rs  profiles.rs  quant_lens.rs  quote_summary.rs  regime.rs  risk.rs  scalp_ws.rs  scalping.rs  schwab.rs  schwab_api.rs  smc.rs  state.rs  stooq.rs  ticker_search.rs  yahoo_session.rs
apps/windows/src-tauri/src/profile_data/: asia.txt
apps/windows/src-tauri/src/regime/: cnn_fng.rs  composite.rs  interpret.rs  math.rs  mod.rs  narrative.rs  pillars.rs  regime_fit.rs  scoring_policy.rs  types.rs
apps/windows/src-tauri/src/regime/fixtures/: cnn_fng_1.json  cnn_fng_2.json  cnn_fng_3.json  cnn_fng_4.json  cnn_fng_5.json  cnn_fng_sample1.json
apps/windows/src-tauri/tests/fixtures/yahoo/quoteSummary/: AAPL.json  C.json  F.json  README.md
apps/windows/src-tauri/tests/fixtures/yahoo/search/: aapl.json  meli.json  mercado.json  microsoft_corporation.json  ms.json  spy.json
docs/: HISTORY_TIME_SERIES.md  MIT-Quant-Bible.es-AR.eink.epub  MIT-Quant-Bible.es-AR.eink.html  MIT-Quant-Bible.es-AR.md  MIT-Quant-Bible.md  QUICK_START.md  SCREENS.md  USER_MANUAL.md  cross-platform-parity.md  index.md  markdown-preview.css
scripts/: android-run.ps1  build-flutter-windows.ps1  create-android-release-keystore.ps1  launch-android.ps1  refresh-us-total-universe.ps1  validate-android.ps1  validate-contracts.ps1  validate-desktop.ps1  validate-flutter.ps1
src/: lib.rs  main.rs  market_data.rs  persistence.rs  profiles.rs  tui.rs  tui_graphs.rs
tests/: product_features.rs  terminal_state.rs  workstation_features.rs
(+367 files in other folders)
