[package]
name = "discount_screener"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ctrlc = "3.4.5"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
