[package]
name = "discount-screener-windows"
version = "0.1.0"
edition = "2021"

[lib]
name = "discount_screener_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "native-tls"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "net"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "brotli", "cookies", "deflate", "gzip", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
pdf-extract = "0.8"
zip = "2.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
